--- a/S02/BLU02 - Advanced Wrangling/Exercise notebook.ipynb
+++ b/S02/BLU02 - Advanced Wrangling/Exercise notebook.ipynb
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -498,135 +498,15 @@
      "solution": true
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>GUID</th>\n",
-       "      <th>Orchestra</th>\n",
-       "      <th>Season</th>\n",
-       "      <th>EventType</th>\n",
-       "      <th>Location</th>\n",
-       "      <th>Venue</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Time</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0002718f-a7a0-4362-9366-92fabab4ff3c</td>\n",
-       "      <td>New York Philharmonic</td>\n",
-       "      <td>1928-29</td>\n",
-       "      <td>Young People's Concert</td>\n",
-       "      <td>Manhattan, NY</td>\n",
-       "      <td>Carnegie Hall</td>\n",
-       "      <td>1928-12-08</td>\n",
-       "      <td>11:00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0004749e-19e2-4c85-a51e-76a2b0987e4e</td>\n",
-       "      <td>New York Philharmonic</td>\n",
-       "      <td>1922-23</td>\n",
-       "      <td>Subscription Season</td>\n",
-       "      <td>Manhattan, NY</td>\n",
-       "      <td>Carnegie Hall</td>\n",
-       "      <td>1922-11-25</td>\n",
-       "      <td>20:30:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0008995b-f0ce-4bdb-b2f8-2fc9827430fe</td>\n",
-       "      <td>New York Symphony</td>\n",
-       "      <td>1925-26</td>\n",
-       "      <td>Subscription Season</td>\n",
-       "      <td>Manhattan, NY</td>\n",
-       "      <td>Carnegie Hall</td>\n",
-       "      <td>1926-02-18</td>\n",
-       "      <td>15:00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0008995b-f0ce-4bdb-b2f8-2fc9827430fe</td>\n",
-       "      <td>New York Symphony</td>\n",
-       "      <td>1925-26</td>\n",
-       "      <td>Subscription Season</td>\n",
-       "      <td>Manhattan, NY</td>\n",
-       "      <td>Mecca Auditorium</td>\n",
-       "      <td>1926-02-21</td>\n",
-       "      <td>15:00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0008fd59-7b87-4e87-8b42-ab5b0f8505cf</td>\n",
-       "      <td>New York Philharmonic</td>\n",
-       "      <td>1942-43</td>\n",
-       "      <td>Subscription Season</td>\n",
-       "      <td>Manhattan, NY</td>\n",
-       "      <td>Carnegie Hall</td>\n",
-       "      <td>1942-10-22</td>\n",
-       "      <td>20:45:00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                   GUID              Orchestra   Season  \\\n",
-       "0  0002718f-a7a0-4362-9366-92fabab4ff3c  New York Philharmonic  1928-29   \n",
-       "1  0004749e-19e2-4c85-a51e-76a2b0987e4e  New York Philharmonic  1922-23   \n",
-       "2  0008995b-f0ce-4bdb-b2f8-2fc9827430fe      New York Symphony  1925-26   \n",
-       "3  0008995b-f0ce-4bdb-b2f8-2fc9827430fe      New York Symphony  1925-26   \n",
-       "4  0008fd59-7b87-4e87-8b42-ab5b0f8505cf  New York Philharmonic  1942-43   \n",
-       "\n",
-       "                EventType       Location             Venue        Date  \\\n",
-       "0  Young People's Concert  Manhattan, NY     Carnegie Hall  1928-12-08   \n",
-       "1     Subscription Season  Manhattan, NY     Carnegie Hall  1922-11-25   \n",
-       "2     Subscription Season  Manhattan, NY     Carnegie Hall  1926-02-18   \n",
-       "3     Subscription Season  Manhattan, NY  Mecca Auditorium  1926-02-21   \n",
-       "4     Subscription Season  Manhattan, NY     Carnegie Hall  1942-10-22   \n",
-       "\n",
-       "       Time  \n",
-       "0  11:00:00  \n",
-       "1  20:30:00  \n",
-       "2  15:00:00  \n",
-       "3  15:00:00  \n",
-       "4  20:45:00  "
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Remember that you want to join on the index of one of the dataframes.\n",
-    "nyp= make_programs().merge(make_concerts(), on=\"GUID\")\n",
-    "nyp.head()"
+    "nyp= concerts.join(programs, on='GUID', how='inner')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -639,19 +519,7 @@
      "solution": false
     }
    },
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-35-444a5f5ebd1e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0msample\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnyp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msample\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrandom_state\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mexpected_hash\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'd47ed1ab14963bb6e594ebaf8d07fc89e78e83058dc78ced57a5bf5ca200efa7'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mexpected_hash\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "shape = str(nyp.shape)\n",
     "expected_hash = 'a75738e37ac4ccf37a893a1009ba624efce9efaa7721d4319e9e078193fe8de6'\n",
@@ -685,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -730,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -775,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -791,13 +659,12 @@
     "# Combine both dataframes, again using an inner type of join.\n",
     "# works_and_soloists : pd.DataFrame = ....\n",
     "# YOUR CODE HERE\n",
-    "list2=[make_works().set_index('GUID'), make_soloists().set_index('GUID')]\n",
-    "works_and_soloists= pd.concat(list2, axis=0, join='inner')"
+    "works_and_soloists= works.merge(soloists, on='GUID', how='inner')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -838,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -852,13 +719,13 @@
    "outputs": [],
    "source": [
     "# Combine everything into a single dataframe.\n",
-    "# nyp_merged = ...\n",
+    "nyp_merged = works_and_soloists.merge(nyp, on='GUID', how='inner')\n",
     "# YOUR CODE HERE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "deletable": false,
     "editable": false,
