--- a/S03 - Time Series/BLU04 - Time Series Concepts/Exercise notebook.ipynb
+++ b/S03 - Time Series/BLU04 - Time Series Concepts/Exercise notebook.ipynb
@@ -107,27 +107,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>67528</th>\n",
+       "      <td>67528</td>\n",
        "      <td>2016-10-18</td>\n",
        "      <td>1655</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>55251</th>\n",
+       "      <td>55251</td>\n",
        "      <td>2016-02-27</td>\n",
        "      <td>1314</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49000</th>\n",
+       "      <td>49000</td>\n",
        "      <td>2015-10-28</td>\n",
        "      <td>1784</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>54244</th>\n",
+       "      <td>54244</td>\n",
        "      <td>2016-02-08</td>\n",
        "      <td>417</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>48311</th>\n",
+       "      <td>48311</td>\n",
        "      <td>2015-10-15</td>\n",
        "      <td>1725</td>\n",
        "    </tr>\n",
@@ -559,31 +559,31 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>43273</th>\n",
+       "      <td>43273</td>\n",
        "      <td>2015-07-09</td>\n",
        "      <td>7</td>\n",
        "      <td>1830</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18371</th>\n",
+       "      <td>18371</td>\n",
        "      <td>2014-02-02</td>\n",
        "      <td>6</td>\n",
        "      <td>2210</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32615</th>\n",
+       "      <td>32615</td>\n",
        "      <td>2014-12-01</td>\n",
        "      <td>10</td>\n",
        "      <td>1107</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62678</th>\n",
+       "      <td>62678</td>\n",
        "      <td>2016-07-16</td>\n",
        "      <td>10</td>\n",
        "      <td>1002</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>58823</th>\n",
+       "      <td>58823</td>\n",
        "      <td>2016-05-04</td>\n",
        "      <td>24</td>\n",
        "      <td>2306</td>\n",
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -816,18 +816,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(53, 1)"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# hint: you can assume that no stores closed in 2015.\n",
     "\n",
@@ -835,8 +824,8 @@
     "nr_stores_2015 = 53\n",
     "nr_stores_opened_2015 = 5\n",
     "stores2=stores.copy()\n",
-    "stores2.reset_index(level='store_nbr', drop=False, inplace=True)\n",
-    "stores.loc['2015'].sum(level='store_nbr').shape"
+    "#stores2.reset_index(level='store_nbr', drop=False, inplace=True)\n",
+    "#stores.loc['2015'].sum(level='store_nbr').shape"
    ]
   },
   {
@@ -881,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 182,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -912,22 +901,40 @@
     "\n",
     "total_sales_per_day_week_before = total_sales_per_day.shift(-7)\n",
     "total_sales_per_day_2_weeks_before = total_sales_per_day.shift(-14)\n",
+    "#total_sales_per_day = total_sales_per_day['01-01-2016': '31-12-2016']\n",
     "\n",
-    "total_sales_per_day_2016_week_before = total_sales_per_day.loc['2016'].resample('W-Sun').sum().reset_index(drop=False).shift(-7)\n",
-    "total_sales_per_day_2016_2_weeks_before = total_sales_per_day.loc['2016'].resample('2W-Sun').sum().reset_index(drop=False).shift(-14)\n",
+    "total_sales_per_day['total_sales_per_day_2016_week_before'] = total_sales_per_day_week_before['01-01-2016': '31-12-2016']\n",
+    "total_sales_per_day['total_sales_per_day_2016_2_weeks_before'] = total_sales_per_day_2_weeks_before['01-01-2016': '31-12-2016']\n",
     "\n",
-    "#total_sales_per_day_2016_week_before['lag_1'] = total_sales_per_day_2016_week_before['customers'].shift(-1)\n",
-    "#total_sales_per_day_2016_2_weeks_before['lag_1'] = total_sales_per_day_2016_2_weeks_before['customers'].shift(-1)\n",
-    "\n",
-    "weekly_corr = total_sales_per_day_2016_week_before.corr()#['lag_1'].customers\n",
-    "biweekly_corr = total_sales_per_day_2016_2_weeks_before.corr()#['lag_1'].customers\n",
-    "\n",
-    "# YOUR CODE HERE"
+    "weekly_corr = total_sales_per_day['total_sales_per_day_2016_week_before'].corr(total_sales_per_day['customers'])\n",
+    "biweekly_corr = total_sales_per_day['total_sales_per_day_2016_2_weeks_before'].corr(total_sales_per_day['customers'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 186,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.42607246376834135"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weekly_corr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -949,7 +956,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-24-1293823d0348>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mexpected_hash1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'96cc11d2ee80bddd4e7241aa7b6abac54810adc28140198c1525a4f1ba9a78db'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mexpected_hash2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'2c66c7d6bee05863b57168ff4f235a7811905085e937d492bf379d379cd3ed95'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweekly_corr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mexpected_hash1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;32massert\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbiweekly_corr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mexpected_hash2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-187-1293823d0348>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mexpected_hash2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'2c66c7d6bee05863b57168ff4f235a7811905085e937d492bf379d379cd3ed95'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32massert\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweekly_corr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mexpected_hash1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbiweekly_corr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mexpected_hash2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mAssertionError\u001b[0m: "
      ]
     }
@@ -981,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -993,7 +1000,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'get_level_values'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-66-b3242c5471b6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0mstores2\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mstores\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'2013'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'store_nbr'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;31m#stores2['store_nbr']=stores2.index(level='store_nbr')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0mnr_stores_2013\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mstores2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_level_values\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[1;31m#for each in nr_stores_2013:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\blu04\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5177\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5178\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5179\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5180\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5181\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'get_level_values'"
+     ]
+    }
+   ],
    "source": [
     "# This one is a bit harder and there are several ways to solve it. For this reasons the\n",
     "# body of the solution is not presented as in the previous questions. \n",
@@ -1004,9 +1024,13 @@
     "# assume linear trends, where the trend is characterized by the slope of the linear regression\n",
     "\n",
     "# max_trend_store = \n",
+    "#stores2=stores.copy()\n",
+    "stores2= stores.loc['2013'].sum(level='store_nbr')\n",
+    "#stores2['store_nbr']=stores2.index(level='store_nbr')\n",
+    "nr_stores_2013= stores2.get_level_values(1)\n",
+    "#for each in nr_stores_2013:\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "nr_stores_2013"
    ]
   },
   {
@@ -1048,7 +1072,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
