--- a/S03 - Time Series/BLU05 - Classical Time Series Models/Exercise notebook.ipynb
+++ b/S03 - Time Series/BLU05 - Classical Time Series Models/Exercise notebook.ipynb
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1098,7 +1098,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0%, 1.6%, 3.1%, 4.7%, 6.2%, 7.8%, 9.4%, 10.9%, "
+      "0.0%, 1.6%, 3.1%, 4.7%, 6.2%, 7.8%, 9.4%, 10.9%, 12.5%, 14.1%, 15.6%, 17.2%, 18.8%, 20.3%, 21.9%, 23.4%, 25.0%, 26.6%, 28.1%, 29.7%, 31.2%, 32.8%, 34.4%, 35.9%, 37.5%, 39.1%, 40.6%, 42.2%, 43.8%, 45.3%, 46.9%, 48.4%, 50.0%, 51.6%, 53.1%, 54.7%, 56.2%, 57.8%, 59.4%, 60.9%, 62.5%, 64.1%, 65.6%, 67.2%, 68.8%, 70.3%, 71.9%, 73.4%, 75.0%, 76.6%, 78.1%, 79.7%, 81.2%, 82.8%, 84.4%, 85.9%, 87.5%, 89.1%, 90.6%, 92.2%, 93.8%, 95.3%, "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mafal\\Anaconda3\\envs\\blu05\\lib\\site-packages\\statsmodels\\base\\model.py:512: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "96.9%, 98.4%, p     1\n",
+      "d     0\n",
+      "q     1\n",
+      "P     1\n",
+      "D     0\n",
+      "Q     1\n",
+      "S    12\n",
+      "Name: 45, dtype: int32\n"
      ]
     }
    ],
@@ -1112,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1125,7 +1147,19 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-36-c4f8348ca6b9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32massert\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbest_params_multistep\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSeries\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mexpected_hash\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'd369f9e8accc3c85b48d84c04261312a56551f884932783ecb1beb9ac04e45df'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbest_params_multistep\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mexpected_hash\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "assert isinstance(prediction_window, int)\n",
     "assert isinstance(best_params_multistep, pd.Series)\n",
